基本布局框架搭建完成

--- a/index.html
+++ b/index.html
@@ -16,7 +16,60 @@
 </head>
 
 <body>
-
+    <!-- 版心 -->
+    <div class="container">
+        <!-- 第一列 -->
+        <div class="column">
+            <!-- 数据概览 -->
+            <div class="panel overview">
+                <div class="inner">
+                </div>
+            </div>
+            <!-- 设备监控 -->
+            <div class="panel monitor">
+                <div class="inner"></div>
+            </div>
+            <!-- 点位分布统计 -->
+            <div class="panel point">
+                <div class="inner"></div>
+            </div>
+        </div>
+        <!-- 第二列 -->
+        <div class="column">
+            <!-- 设备数据统计(地图) -->
+            <div class="map"></div>
+            <!-- 全国用户总量统计 -->
+            <div class="panel userTotal">
+                <div class="inner"></div>
+            </div>
+        </div>
+        <!-- 第三列 -->
+        <div class="column">
+            <!-- 订单销售额概览 -->
+            <div class="panel order">
+                <div class="inner"></div>
+            </div>
+            <!-- 销售额统计 -->
+            <div class="panel sale">
+                <div class="inner"></div>
+            </div>
+            <!-- 渠道分布和一季度销售进度 -->
+            <div class="twoInOne">
+                <!-- 渠道分布 -->
+                <div class="panel channel">
+                    <div class="inner"></div>
+                </div>
+                <!-- 一季度销售进度 -->
+                <div class="panel quarter">
+                    <div class="inner"></div>
+                </div>
+            </div>
+            <!-- 全国热榜 各省热销 -->
+            <div class="panel hot">
+                <div class="inner"></div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
