数据概览布局完成

--- a/index.html
+++ b/index.html
@@ -23,6 +23,26 @@
             <!-- 数据概览 -->
             <div class="panel overview">
                 <div class="inner">
+                    <div class="item">
+                        <h3>2,190</h3>
+                        <i class="icon-dot" style="color:#006cff;"></i>
+                        <span>设备总数</span>
+                    </div>
+                    <div class="item">
+                        <h3>190</h3>
+                        <i class="icon-dot" style="color:#6acca3;"></i>
+                        <span>季度新增</span>
+                    </div>
+                    <div class="item">
+                        <h3>3,001</h3>
+                        <i class="icon-dot" style="color:#6acca3;"></i>
+                        <span>运营设备</span>
+                    </div>
+                    <div class="item">
+                        <h3>108</h3>
+                        <i class="icon-dot" style="color:#ed3f35;"></i>
+                        <span>异常设备</span>
+                    </div>
                 </div>
             </div>
             <!-- 设备监控 -->
@@ -34,6 +54,7 @@
                 <div class="inner"></div>
             </div>
         </div>
+
         <!-- 第二列 -->
         <div class="column">
             <!-- 设备数据统计(地图) -->
@@ -43,6 +64,7 @@
                 <div class="inner"></div>
             </div>
         </div>
+
         <!-- 第三列 -->
         <div class="column">
             <!-- 订单销售额概览 -->
