设备监控布局完成

--- a/index.html
+++ b/index.html
@@ -47,7 +47,180 @@
             </div>
             <!-- 设备监控 -->
             <div class="panel monitor">
-                <div class="inner"></div>
+                <div class="inner">
+                    <!-- 头部 -->
+                    <div class="head">
+                        <span class="active">故障设备监控</span>
+                        <span class="sp">|</span>
+                        <span>异常设备监控</span>
+                    </div>
+                    <!-- 标题 -->
+                    <div class="title">
+                        <span>故障时间</span>
+                        <span>设备地址</span>
+                        <span>故障代码</span>
+                    </div>
+                    <!-- 内容1 -->
+                    <div class="content active">
+                        <ul>
+                            <li>
+                                <span>20201227</span>
+                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                <span>200001</span>
+                            </li>
+                            <li>
+                                <span>20201227</span>
+                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                <span>200002</span>
+                            </li>
+                            <li>
+                                <span>20201227</span>
+                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                <span>200003</span>
+                            </li>
+                            <li>
+                                <span>20201227</span>
+                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                <span>200004</span>
+                            </li>
+                            <li>
+                                <span>20201227</span>
+                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                <span>200005</span>
+                            </li>
+                            <li>
+                                <span>20201227</span>
+                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                <span>200006</span>
+                            </li>
+                            <li>
+                                <span>20201227</span>
+                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                <span>200007</span>
+                            </li>
+                            <li>
+                                <span>20201227</span>
+                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                <span>200008</span>
+                            </li>
+                            <li>
+                                <span>20201227</span>
+                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                <span>200009</span>
+                            </li>
+                            <li>
+                                <span>20201227</span>
+                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                <span>2000010</span>
+                            </li>
+                            <li>
+                                <span>20201227</span>
+                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                <span>2000011</span>
+                            </li>
+                            <li>
+                                <span>20201227</span>
+                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                <span>2000012</span>
+                            </li>
+                            <li>
+                                <span>20201227</span>
+                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                <span>2000013</span>
+                            </li>
+                            <li>
+                                <span>20201227</span>
+                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                <span>2000014</span>
+                            </li>
+                            <li>
+                                <span>20201227</span>
+                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                <span>2000015</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- 内容2 -->
+                    <div class="content">
+                        <ul>
+                            <li>
+                                <span>20201227</span>
+                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                <span>200001</span>
+                            </li>
+                            <li>
+                                <span>20201227</span>
+                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                <span>200002</span>
+                            </li>
+                            <li>
+                                <span>20201227</span>
+                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                <span>200003</span>
+                            </li>
+                            <li>
+                                <span>20201227</span>
+                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                <span>200004</span>
+                            </li>
+                            <li>
+                                <span>20201227</span>
+                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                <span>200005</span>
+                            </li>
+                            <li>
+                                <span>20201227</span>
+                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                <span>200006</span>
+                            </li>
+                            <li>
+                                <span>20201227</span>
+                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                <span>200007</span>
+                            </li>
+                            <li>
+                                <span>20201227</span>
+                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                <span>200008</span>
+                            </li>
+                            <li>
+                                <span>20201227</span>
+                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                <span>200009</span>
+                            </li>
+                            <li>
+                                <span>20201227</span>
+                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                <span>2000010</span>
+                            </li>
+                            <li>
+                                <span>20201227</span>
+                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                <span>2000011</span>
+                            </li>
+                            <li>
+                                <span>20201227</span>
+                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                <span>2000012</span>
+                            </li>
+                            <li>
+                                <span>20201227</span>
+                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                <span>2000013</span>
+                            </li>
+                            <li>
+                                <span>20201227</span>
+                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                <span>2000014</span>
+                            </li>
+                            <li>
+                                <span>20201227</span>
+                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                <span>2000015</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
             <!-- 点位分布统计 -->
             <div class="panel point">
