点位分布统计布局完成

--- a/index.html
+++ b/index.html
@@ -224,7 +224,22 @@
             </div>
             <!-- 点位分布统计 -->
             <div class="panel point">
-                <div class="inner"></div>
+                <div class="inner">
+                    <h3>点位分布统计</h3>
+                    <div class="echarts">
+                        <div class="pie"></div>
+                        <div class="data">
+                            <div class="item">
+                                <h3>320,11</h3>
+                                <i class="icon-dot" style="color: #ed3f35;"></i><span>点位总数</span>
+                            </div>
+                            <div class="item">
+                                <h3>418</h3>
+                                <i class="icon-dot" style="color: #eacf19;"></i><span>本月新增</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -249,7 +264,7 @@
                 <div class="inner"></div>
             </div>
             <!-- 渠道分布和一季度销售进度 -->
-            <div class="twoInOne">
+            <div class="twoInOne clearfix">
                 <!-- 渠道分布 -->
                 <div class="panel channel">
                     <div class="inner"></div>
