全国用户总量统计布局完成

--- a/index.html
+++ b/index.html
@@ -249,7 +249,22 @@
             <div class="map"></div>
             <!-- 全国用户总量统计 -->
             <div class="panel userTotal">
-                <div class="inner"></div>
+                <div class="inner">
+                    <h3>全国用户总量统计</h3>
+                    <div class="echarts">
+                        <div class="bar"></div>
+                        <div class="data">
+                            <div class="item">
+                                <h3>120,899</h3>
+                                <i class="icon-dot" style="color: #ed3f35;"></i><span>用户总量</span>
+                            </div>
+                            <div class="item">
+                                <h3>418</h3>
+                                <i class="icon-dot" style="color: #eacf19;"></i><span>本月新增</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
