订单销售额概览布局完成

--- a/index.html
+++ b/index.html
@@ -227,7 +227,9 @@
                 <div class="inner">
                     <h3>点位分布统计</h3>
                     <div class="echarts">
+                        <!-- 饼状图 -->
                         <div class="pie"></div>
+                        <!-- 数据 -->
                         <div class="data">
                             <div class="item">
                                 <h3>320,11</h3>
@@ -252,7 +254,9 @@
                 <div class="inner">
                     <h3>全国用户总量统计</h3>
                     <div class="echarts">
+                        <!-- 柱状图 -->
                         <div class="bar"></div>
+                        <!-- 数据 -->
                         <div class="data">
                             <div class="item">
                                 <h3>120,899</h3>
@@ -272,7 +276,29 @@
         <div class="column">
             <!-- 订单销售额概览 -->
             <div class="panel order">
-                <div class="inner"></div>
+                <div class="inner">
+                    <!-- 标题 -->
+                    <div class="title">
+                        <a href="javascript:" class=" active">365天</a>
+                        <span class="sp">|</span>
+                        <a href="javascript:">90天</a>
+                        <span class="sp">|</span>
+                        <a href="javascript:">30天</a>
+                        <span class="sp">|</span>
+                        <a href="javascript:">24小时</a>
+                    </div>
+                    <!-- 数据 -->
+                    <div class="data">
+                        <div class="item">
+                            <h3>20,301</h3>
+                            <i class="icon-dot" style="color:#ed3f35;"></i><span>订单量</span>
+                        </div>
+                        <div class="item">
+                            <h3>99834</h3>
+                            <i class="icon-dot" style="color:#eacf19;"></i><span>销售额(万元)</span>
+                        </div>
+                    </div>
+                </div>
             </div>
             <!-- 销售额统计 -->
             <div class="panel sale">
