点位分布统计和全国用户总量统计样式代码优化

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 </div>
             </div>
             <!-- 点位分布统计 -->
-            <div class="panel point">
+            <div class="panel point share">
                 <div class="inner">
                     <h3>点位分布统计</h3>
                     <div class="echarts">
@@ -250,7 +250,7 @@
             <!-- 设备数据统计(地图) -->
             <div class="map"></div>
             <!-- 全国用户总量统计 -->
-            <div class="panel userTotal">
+            <div class="panel userTotal share">
                 <div class="inner">
                     <h3>全国用户总量统计</h3>
                     <div class="echarts">
