销售额统计样式布局完成

--- a/index.html
+++ b/index.html
@@ -302,7 +302,18 @@
             </div>
             <!-- 销售额统计 -->
             <div class="panel sale">
-                <div class="inner"></div>
+                <div class="inner">
+                    <div class="title">
+                        <h3>销售额统计</h3>
+                        <span>|</span>
+                        <a href="javascript:" class="active">年</a>
+                        <a href="javascript:">季</a>
+                        <a href="javascript:">月</a>
+                        <a href="javascript:">周</a>
+                    </div>
+                    <!-- 线型图 -->
+                    <div class="line"></div>
+                </div>
             </div>
             <!-- 渠道分布和一季度销售进度 -->
             <div class="twoInOne clearfix">
