渠道进度和一季度销售进度样式布局完成

--- a/index.html
+++ b/index.html
@@ -319,11 +319,43 @@
             <div class="twoInOne clearfix">
                 <!-- 渠道分布 -->
                 <div class="panel channel">
-                    <div class="inner"></div>
+                    <div class="inner">
+                        <h3>渠道分布</h3>
+                        <div class="item">
+                            <h3>39<b>%</b></h3>
+                            <i class="icon-plane"></i><span>机场</span>
+                        </div>
+                        <div class="item">
+                            <h3>28<b>%</b></h3>
+                            <i class="icon-bag"></i><span>商场</span>
+                        </div>
+                        <div class="item">
+                            <h3>20<b>%</b></h3>
+                            <i class="icon-train"></i><span>地铁</span>
+                        </div>
+                        <div class="item">
+                            <h3>13<b>%</b></h3>
+                            <i class="icon-bus"></i><span>火车站</span>
+                        </div>
+                    </div>
                 </div>
                 <!-- 一季度销售进度 -->
                 <div class="panel quarter">
-                    <div class="inner"></div>
+                    <div class="inner">
+                        <h3>一季度销售进度</h3>
+                        <!-- 环形图 -->
+                        <div class="ring"></div>
+                        <div class="data">
+                            <div class="item">
+                                <p>1,321</p>
+                                <i class="icon-dot" style="color: #6acca3;"></i><span>销售额</span>
+                            </div>
+                            <div class="item">
+                                <p>150%</p>
+                                <i class="icon-dot" style="color: #ed3f35;"></i><span>同比增长</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <!-- 全国热榜 各省热销 -->
