全国热榜 各省热销样式布局完成

--- a/index.html
+++ b/index.html
@@ -331,11 +331,11 @@
                         </div>
                         <div class="item">
                             <h3>20<b>%</b></h3>
-                            <i class="icon-train"></i><span>地铁</span>
+                            <i class="icon-bus"></i><span>地铁</span>
                         </div>
                         <div class="item">
                             <h3>13<b>%</b></h3>
-                            <i class="icon-bus"></i><span>火车站</span>
+                            <i class="icon-train"></i><span>火车站</span>
                         </div>
                     </div>
                 </div>
@@ -360,7 +360,89 @@
             </div>
             <!-- 全国热榜 各省热销 -->
             <div class="panel hot">
-                <div class="inner"></div>
+                <div class="inner">
+                    <div class="title">
+                        <h3>全国热榜</h3>
+                        <h3>各省热榜</h3>
+                        <i>//近30日//</i>
+                    </div>
+                    <div class="data">
+                        <div class="left">
+                            <div class="item">
+                                <i class="icon-cup1" style="color:#d93f36;"></i><span>可爱多</span>
+                            </div>
+                            <div class="item">
+                                <i class="icon-cup2" style="color:#68d8fe;"></i><span>哇哈哈</span>
+                            </div>
+                            <div class="item">
+                                <i class="icon-cup3" style="color:#4c9bfd;"></i><span>喜之郎</span>
+                            </div>
+                        </div>
+                        <div class="middle">
+                            <ul>
+                                <li class="active">
+                                    <span>北京</span>
+                                    <b>25,179</b>
+                                    <i class="icon-up"></i>
+                                </li>
+                                <li>
+                                    <span>河北</span>
+                                    <b>23,252</b>
+                                    <i class="icon-down"></i>
+                                </li>
+                                <li>
+                                    <span>上海</span>
+                                    <b>20,456</b>
+                                    <i class="icon-up"></i>
+                                </li>
+                                <li>
+                                    <span>江苏</span>
+                                    <b>23,234</b>
+                                    <i class="icon-down"></i>
+                                </li>
+                                <li>
+                                    <span>山东</span>
+                                    <b>56,234</b>
+                                    <i class="icon-up"></i>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="right">
+                            <ul>
+                                <li>
+                                    <span>哇哈哈</span>
+                                    <b>8,341</b>
+                                    <i class="icon-up"></i>
+                                </li>
+                                <li>
+                                    <span>喜之郎</span>
+                                    <b>7,407</b>
+                                    <i class="icon-up"></i>
+                                </li>
+                                <li>
+                                    <span>巧乐兹</span>
+                                    <b>6,080</b>
+                                    <i class="icon-up"></i>
+                                </li>
+                                <li>
+                                    <span>小洋人</span>
+                                    <b>6,724</b>
+                                    <i class="icon-up"></i>
+                                </li>
+                                <li>
+                                    <span>好多鱼</span>
+                                    <b>2,170</b>
+                                    <i class="icon-up"></i>
+                                </li>
+                                <li>
+                                    <span>可爱多</span>
+                                    <b>9,086</b>
+                                    <i class="icon-up"></i>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
