样式细节调整

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                 <div class="inner">
                     <!-- 头部 -->
                     <div class="head">
-                        <span class="active">故障设备监控</span>
+                        <a href="javascrpt:"><span class="active">故障设备监控</span></a>
                         <span class="sp">|</span>
-                        <span>异常设备监控</span>
+                        <a href="javascript:"><span>异常设备监控</span></a>
                     </div>
                     <!-- 标题 -->
                     <div class="title">
