--- a/index.html
+++ b/index.html
@@ -50,175 +50,185 @@
                 <div class="inner">
                     <!-- 头部 -->
                     <div class="head">
-                        <a href="javascrpt:"><span class="active">故障设备监控</span></a>
+                        <a href="javascript:" class="active"><span>故障设备监控</span></a>
                         <span class="sp">|</span>
                         <a href="javascript:"><span>异常设备监控</span></a>
                     </div>
-                    <!-- 标题 -->
-                    <div class="title">
-                        <span>故障时间</span>
-                        <span>设备地址</span>
-                        <span>故障代码</span>
-                    </div>
                     <!-- 内容1 -->
-                    <div class="content active">
-                        <ul>
-                            <li>
-                                <span>20201227</span>
-                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
-                                <span>200001</span>
-                            </li>
-                            <li>
-                                <span>20201227</span>
-                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
-                                <span>200002</span>
-                            </li>
-                            <li>
-                                <span>20201227</span>
-                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
-                                <span>200003</span>
-                            </li>
-                            <li>
-                                <span>20201227</span>
-                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
-                                <span>200004</span>
-                            </li>
-                            <li>
-                                <span>20201227</span>
-                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
-                                <span>200005</span>
-                            </li>
-                            <li>
-                                <span>20201227</span>
-                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
-                                <span>200006</span>
-                            </li>
-                            <li>
-                                <span>20201227</span>
-                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
-                                <span>200007</span>
-                            </li>
-                            <li>
-                                <span>20201227</span>
-                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
-                                <span>200008</span>
-                            </li>
-                            <li>
-                                <span>20201227</span>
-                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
-                                <span>200009</span>
-                            </li>
-                            <li>
-                                <span>20201227</span>
-                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
-                                <span>2000010</span>
-                            </li>
-                            <li>
-                                <span>20201227</span>
-                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
-                                <span>2000011</span>
-                            </li>
-                            <li>
-                                <span>20201227</span>
-                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
-                                <span>2000012</span>
-                            </li>
-                            <li>
-                                <span>20201227</span>
-                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
-                                <span>2000013</span>
-                            </li>
-                            <li>
-                                <span>20201227</span>
-                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
-                                <span>2000014</span>
-                            </li>
-                            <li>
-                                <span>20201227</span>
-                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
-                                <span>2000015</span>
-                            </li>
-                        </ul>
+                    <div class="content">
+                        <!-- 标题 -->
+                        <div class="title">
+                            <span>故障时间</span>
+                            <span>设备地址</span>
+                            <span>故障代码</span>
+                        </div>
+                        <div class="carousel">
+                            <ul>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                    <span>200001</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                    <span>200002</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                    <span>200003</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                    <span>200004</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                    <span>200005</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                    <span>200006</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                    <span>200007</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                    <span>200008</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                    <span>200009</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                    <span>2000010</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                    <span>2000011</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                    <span>2000012</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                    <span>2000013</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                    <span>2000014</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
+                                    <span>2000015</span>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                     <!-- 内容2 -->
-                    <div class="content">
-                        <ul>
-                            <li>
-                                <span>20201227</span>
-                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
-                                <span>200001</span>
-                            </li>
-                            <li>
-                                <span>20201227</span>
-                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
-                                <span>200002</span>
-                            </li>
-                            <li>
-                                <span>20201227</span>
-                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
-                                <span>200003</span>
-                            </li>
-                            <li>
-                                <span>20201227</span>
-                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
-                                <span>200004</span>
-                            </li>
-                            <li>
-                                <span>20201227</span>
-                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
-                                <span>200005</span>
-                            </li>
-                            <li>
-                                <span>20201227</span>
-                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
-                                <span>200006</span>
-                            </li>
-                            <li>
-                                <span>20201227</span>
-                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
-                                <span>200007</span>
-                            </li>
-                            <li>
-                                <span>20201227</span>
-                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
-                                <span>200008</span>
-                            </li>
-                            <li>
-                                <span>20201227</span>
-                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
-                                <span>200009</span>
-                            </li>
-                            <li>
-                                <span>20201227</span>
-                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
-                                <span>2000010</span>
-                            </li>
-                            <li>
-                                <span>20201227</span>
-                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
-                                <span>2000011</span>
-                            </li>
-                            <li>
-                                <span>20201227</span>
-                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
-                                <span>2000012</span>
-                            </li>
-                            <li>
-                                <span>20201227</span>
-                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
-                                <span>2000013</span>
-                            </li>
-                            <li>
-                                <span>20201227</span>
-                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
-                                <span>2000014</span>
-                            </li>
-                            <li>
-                                <span>20201227</span>
-                                <span>传智播客黑马程序员深圳校区前端与移动开发就业班65期</span>
-                                <span>2000015</span>
-                            </li>
-                        </ul>
+                    <div class="content" style="display: none;">
+                        <!-- 标题 -->
+                        <div class="title">
+                            <span>异常时间</span>
+                            <span>异常地址</span>
+                            <span>异常代码</span>
+                        </div>
+                        <div class="carousel">
+                            <ul>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>深圳市宝安区石岩街道创维创新谷2区B栋</span>
+                                    <span>200001</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>深圳市宝安区石岩街道创维创新谷2区B栋</span>
+                                    <span>200002</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>深圳市宝安区石岩街道创维创新谷2区B栋</span>
+                                    <span>200003</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>深圳市宝安区石岩街道创维创新谷2区B栋</span>
+                                    <span>200004</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>深圳市宝安区石岩街道创维创新谷2区B栋</span>
+                                    <span>200005</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>深圳市宝安区石岩街道创维创新谷2区B栋</span>
+                                    <span>200006</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>深圳市宝安区石岩街道创维创新谷2区B栋</span>
+                                    <span>200007</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>深圳市宝安区石岩街道创维创新谷2区B栋</span>
+                                    <span>200008</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>深圳市宝安区石岩街道创维创新谷2区B栋</span>
+                                    <span>200009</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>深圳市宝安区石岩街道创维创新谷2区B栋</span>
+                                    <span>2000010</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>深圳市宝安区石岩街道创维创新谷2区B栋</span>
+                                    <span>2000011</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>深圳市宝安区石岩街道创维创新谷2区B栋</span>
+                                    <span>2000012</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>深圳市宝安区石岩街道创维创新谷2区B栋</span>
+                                    <span>2000013</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>深圳市宝安区石岩街道创维创新谷2区B栋</span>
+                                    <span>2000014</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>深圳市宝安区石岩街道创维创新谷2区B栋</span>
+                                    <span>2000015</span>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -449,3 +459,8 @@
 </body>
 
 </html>
+
+<!-- <script src="./js/jquery-1.12.4.js"></script>
+<script>
+
+</script> -->
