订单销售额概览动画完成

--- a/index.html
+++ b/index.html
@@ -278,6 +278,57 @@
                                     <span>深圳市宝安区石岩街道创维创新谷2区B栋</span>
                                     <span>2000015</span>
                                 </li>
+                                <!-- 替身代码 -->
+                                <li>
+                                    <span>20201227</span>
+                                    <span>深圳市宝安区石岩街道创维创新谷2区B栋</span>
+                                    <span>200001</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>深圳市宝安区石岩街道创维创新谷2区B栋</span>
+                                    <span>200002</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>深圳市宝安区石岩街道创维创新谷2区B栋</span>
+                                    <span>200003</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>深圳市宝安区石岩街道创维创新谷2区B栋</span>
+                                    <span>200004</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>深圳市宝安区石岩街道创维创新谷2区B栋</span>
+                                    <span>200005</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>深圳市宝安区石岩街道创维创新谷2区B栋</span>
+                                    <span>200006</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>深圳市宝安区石岩街道创维创新谷2区B栋</span>
+                                    <span>200007</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>深圳市宝安区石岩街道创维创新谷2区B栋</span>
+                                    <span>200008</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>深圳市宝安区石岩街道创维创新谷2区B栋</span>
+                                    <span>200009</span>
+                                </li>
+                                <li>
+                                    <span>20201227</span>
+                                    <span>深圳市宝安区石岩街道创维创新谷2区B栋</span>
+                                    <span>2000010</span>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -351,7 +402,7 @@
                     <!-- 数据 -->
                     <div class="data">
                         <div class="item">
-                            <h3>20,301</h3>
+                            <h3>301,987</h3>
                             <i class="icon-dot" style="color:#ed3f35;"></i><span>订单量</span>
                         </div>
                         <div class="item">
