--- a/index.html
+++ b/index.html
@@ -360,7 +360,10 @@
         <!-- 第二列 -->
         <div class="column">
             <!-- 设备数据统计(地图) -->
-            <div class="map"></div>
+            <h3 class="total"><span class="icon-cube" style="color:#68d8fe;"></span> 设备数据统计</h3>
+            <div class="map">
+                <div class="geo"></div>
+            </div>
             <!-- 全国用户总量统计 -->
             <div class="panel userTotal share">
                 <div class="inner">
@@ -456,7 +459,8 @@
                     <div class="inner">
                         <h3>一季度销售进度</h3>
                         <!-- 环形图 -->
-                        <div class="ring"></div>
+                        <div class="ring">
+                        </div>
                         <div class="data">
                             <div class="item">
                                 <p>1,321</p>
